force-app/main/default/objects/Course__c/fields/Total_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_Seats__c</fullName>
    <label>Total Seats</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>