force-app/main/default/objects/Course__c/recordTypes/JEE_UG.recordType-meta.xml
<RecordType>
    <fullName>JEE_UG</fullName>
    <active>true</active>
    <label>JEE UG</label>
</RecordType>