force-app/main/default/objects/Course__c/recordTypes/NEET_UG.recordType-meta.xml
<RecordType>
    <fullName>NEET_UG</fullName>
    <active>true</active>
    <label>NEET UG</label>
</RecordType>