force-app/main/default/objects/Course__c/recordTypes/PCMB.recordType-meta.xml
<RecordType>
    <fullName>PCMB</fullName>
    <active>true</active>
    <label>PCMB</label>
</RecordType>