force-app/main/default/objects/Course__c/validationRules/Start_date_should_be_less_than_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_should_be_less_than_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>Start Date should be before end date</errorMessage>
</ValidationRule>